syntax = "proto3";
package celestia.feeaddress.v1;

import "cosmos_proto/cosmos.proto";
import "google/api/annotations.proto";

option go_package = "github.com/celestiaorg/celestia-app/x/feeaddress/types";

// Query defines the gRPC querier service for the feeaddress module.
service Query {
  // FeeAddress returns the address where tokens should be sent to be forwarded to validators.
  rpc FeeAddress(QueryFeeAddressRequest) returns (QueryFeeAddressResponse) {
    option (google.api.http).get = "/celestia/feeaddress/v1/fee_address";
  }
}

// QueryFeeAddressRequest is the request type for the Query/FeeAddress RPC method.
message QueryFeeAddressRequest {}

// QueryFeeAddressResponse is the response type for the Query/FeeAddress RPC method.
message QueryFeeAddressResponse {
  // fee_address is the bech32-encoded address where tokens should be sent.
  string fee_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}
